flux/infrastructure/victoria-stack/overlays/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoria-stack
  namespace: victoria-metrics
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - logs.monitoring.lab.margays.dev
        - metrics.monitoring.lab.margays.dev
        - traces.monitoring.lab.margays.dev
      secretName: victoria-stack-tls
  rules:
    - host: logs.monitoring.lab.margays.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoria-logs-cluster-vlinsert
                port:
                  number: 9481
    - host: metrics.monitoring.lab.margays.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoria-metrics-cluster-vminsert
                port:
                  number: 8480
    - host: traces.monitoring.lab.margays.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoria-traces-cluster-vt-cluster-vtinsert
                port:
                  number: 10481
